@@ -46,7 +46,7 @@
 (define-main-key ("Up" :mod-1) 'select-next-level)
 
 (define-main-key ("Tab" :mod-1) 'select-next-child)
-(define-main-key ("ISO_Left_Tab" :mod-1 :shift) 'select-previous-child)
+(define-main-key ("Tab" :mod-1 :shift) 'select-previous-child)
 
 (define-main-key ("Return" :mod-1) 'enter-frame)
 (define-main-key ("Return" :mod-1 :shift) 'leave-frame)
